# tensorflow-word2vec-input-data

./: .gitignore  Setup.hs  tensorflow-word2vec-input-data.cabal
src/TensorFlow/Examples/Word2Vec/: InputData.hs
